testsuite/bsc.names/portRenaming/invalidAttrs/result/Keyword.bsv

interface Ifc;
 (* result = "always" *)
 method Bool check ();
endinterface

(* synthesize *) 
module mkKeyword (Ifc);
endmodule
